@@ -1,6 +1,7 @@
 package rs.ruta.client;
 
 import java.awt.BorderLayout;
+import java.awt.EventQueue;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
 import javax.swing.*;
@@ -34,6 +35,7 @@ public class RegisterDialog extends JDialog
 		JLabel usernameLabel = new JLabel("Username: ", SwingConstants.LEFT);
 		userPanel.add(usernameLabel);
 		JTextField usernameField = new JTextField(30);
+		usernameField.setInputVerifier(new UsernameVerifier());
 		userPanel.add(usernameField);
 		credentialsPanel.add(userPanel, cons1);
 		GridBagConstraints cons2 = new GridBagConstraints();
@@ -47,6 +49,7 @@ public class RegisterDialog extends JDialog
 		JLabel passwordLabel = new JLabel("Password: ",  SwingConstants.LEFT);
 		passPanel.add(passwordLabel);
 		JTextField passwordField = new JPasswordField(30);
+		passwordField.setInputVerifier(new PasswordVerifier());
 		passPanel.add(passwordField);
 		credentialsPanel.add(passPanel, cons2);
 /*		JLabel partyLabel = new JLabel("Party data: ");
@@ -66,13 +69,14 @@ public class RegisterDialog extends JDialog
 		buttonPanel.add(registerButton);
 		registerButton.addActionListener(event ->
 		{
-			registerPressed = true;
 			username = usernameField.getText();
 			password = passwordField.getText();
+			registerPressed = true;
 			setVisible(false);
 		});
 
 		JButton cancelButton = new JButton("Cancel");
+		cancelButton.setVerifyInputWhenFocusTarget(false);
 		buttonPanel.add(cancelButton);
 		cancelButton.addActionListener(event ->
 		{
@@ -83,7 +87,6 @@ public class RegisterDialog extends JDialog
 
 		add(buttonPanel, BorderLayout.SOUTH);
 	}
-
 
 	public String getUsername()
 	{
@@ -116,5 +119,53 @@ public class RegisterDialog extends JDialog
 	public void setRegisterPressed(boolean registerPressed)
 	{
 		this.registerPressed = registerPressed;
+	}
+
+	private class UsernameVerifier extends InputVerifier
+	{
+		@Override
+		public boolean verify(JComponent input)
+		{
+			String text = ((JTextField)input).getText();
+			if(text.length() < 3)
+				return false;
+			else
+				return true;
+		}
+
+		@Override
+		public boolean shouldYieldFocus(JComponent input)
+		{
+			boolean valid = verify(input);
+			if (!valid)
+				EventQueue.invokeLater(() ->
+				JOptionPane.showMessageDialog(RegisterDialog.this, "Username has to be at least 3 characters long.",
+						"Incorrect input data", JOptionPane.ERROR_MESSAGE));
+			return valid;
+		}
+	}
+
+	private class PasswordVerifier extends InputVerifier
+	{
+		@Override
+		public boolean verify(JComponent input)
+		{
+			String text = ((JTextField)input).getText();
+			if(text.length() < 3)
+				return false;
+			else
+				return true;
+		}
+
+		@Override
+		public boolean shouldYieldFocus(JComponent input)
+		{
+			boolean valid = verify(input);
+			if (!valid)
+				EventQueue.invokeLater(() ->
+				JOptionPane.showMessageDialog(RegisterDialog.this, "Password has to be at least 3 characters long.",
+						"Incorrect input data", JOptionPane.ERROR_MESSAGE));
+			return valid;
+		}
 	}
 }
